archives/workspace-consolidation-feb2026/test_logs/build_output_momentum_core_REAL_FAIL.txt
Command line invocation:
    /Applications/Xcode.app/Contents/Developer/usr/bin/xcodebuild build -project MomentumFinance.xcodeproj -scheme MomentumFinanceCore -destination "platform=iOS Simulator,name=iPhone 17" -configuration Debug

Resolve Package Graph


Resolved source packages:
  swift-system: https://github.com/apple/swift-system.git @ 1.6.4
  shared-kit: /Users/danielstevens/github-projects/Shared-Kit @ local
  swift-nio: https://github.com/apple/swift-nio.git @ 2.94.1
  swift-atomics: https://github.com/apple/swift-atomics.git @ 1.3.0
  swift-collections: https://github.com/apple/swift-collections.git @ 1.3.0

ComputePackagePrebuildTargetDependencyGraph

Prepare packages

CreateBuildRequest

SendProjectDescription

CreateBuildOperation

ComputeTargetDependencyGraph
note: Building targets in dependency order
note: Target dependency graph (1 target)
    Target 'MomentumFinanceCore' in project 'MomentumFinance' (no dependencies)

GatherProvisioningInputs

CreateBuildDescription

ExecuteExternalTool /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -v -E -dM -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator26.2.sdk -x c -c /dev/null

ExecuteExternalTool /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc --version

ExecuteExternalTool /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/libtool -V

Build description signature: d639b49d6687cfb1ec7d73c686bc036e
Build description path: /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/XCBuildData/d639b49d6687cfb1ec7d73c686bc036e.xcbuilddata
ClangStatCache /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang-stat-cache /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator26.2.sdk /Users/danielstevens/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/iphonesimulator26.2-23C57-e8867d0c40613ffc63e0238af232dc507d00a8b37fbd7999ea79df8ebc024bf0.sdkstatcache
    cd /Users/danielstevens/github-projects/momentum-finance/MomentumFinance.xcodeproj
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang-stat-cache /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator26.2.sdk -o /Users/danielstevens/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/iphonesimulator26.2-23C57-e8867d0c40613ffc63e0238af232dc507d00a8b37fbd7999ea79df8ebc024bf0.sdkstatcache

WriteAuxiliaryFile /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore.SwiftFileList (in target 'MomentumFinanceCore' from project 'MomentumFinance')
    cd /Users/danielstevens/github-projects/momentum-finance
    write-file /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore.SwiftFileList

WriteAuxiliaryFile /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore.SwiftConstValuesFileList (in target 'MomentumFinanceCore' from project 'MomentumFinance')
    cd /Users/danielstevens/github-projects/momentum-finance
    write-file /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore.SwiftConstValuesFileList

WriteAuxiliaryFile /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore-OutputFileMap.json (in target 'MomentumFinanceCore' from project 'MomentumFinance')
    cd /Users/danielstevens/github-projects/momentum-finance
    write-file /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore-OutputFileMap.json

WriteAuxiliaryFile /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore.LinkFileList (in target 'MomentumFinanceCore' from project 'MomentumFinance')
    cd /Users/danielstevens/github-projects/momentum-finance
    write-file /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore.LinkFileList

ProcessInfoPlistFile /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Products/Debug-iphonesimulator/MomentumFinanceCore.framework/Info.plist /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/empty-MomentumFinanceCore.plist (in target 'MomentumFinanceCore' from project 'MomentumFinance')
    cd /Users/danielstevens/github-projects/momentum-finance
    builtin-infoPlistUtility /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/empty-MomentumFinanceCore.plist -producttype com.apple.product-type.framework -expandbuildsettings -format binary -platform iphonesimulator -o /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Products/Debug-iphonesimulator/MomentumFinanceCore.framework/Info.plist

SwiftDriver MomentumFinanceCore normal arm64 com.apple.xcode.tools.swift.compiler (in target 'MomentumFinanceCore' from project 'MomentumFinance')
    cd /Users/danielstevens/github-projects/momentum-finance
    builtin-SwiftDriver -- /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc -module-name MomentumFinanceCore -Onone -enforce-exclusivity\=checked @/Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore.SwiftFileList -DDEBUG -enable-experimental-feature DebugDescriptionMacro -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator26.2.sdk -target arm64-apple-ios26.0-simulator -g -module-cache-path /Users/danielstevens/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -Xfrontend -serialize-debugging-options -enable-testing -index-store-path /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Index.noindex/DataStore -Xcc -D_LIBCPP_HARDENING_MODE\=_LIBCPP_HARDENING_MODE_DEBUG -swift-version 6 -I /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Products/Debug-iphonesimulator -F /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Products/Debug-iphonesimulator -c -j10 -enable-batch-mode -incremental -Xcc -ivfsstatcache -Xcc /Users/danielstevens/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/iphonesimulator26.2-23C57-e8867d0c40613ffc63e0238af232dc507d00a8b37fbd7999ea79df8ebc024bf0.sdkstatcache -output-file-map /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore-OutputFileMap.json -use-frontend-parseable-output -save-temps -no-color-diagnostics -explicit-module-build -module-cache-path /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/SwiftExplicitPrecompiledModules -clang-scanner-module-cache-path /Users/danielstevens/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -sdk-module-cache-path /Users/danielstevens/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -serialize-diagnostics -emit-dependencies -emit-module -emit-module-path /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore.swiftmodule -validate-clang-modules-once -clang-build-session-file /Users/danielstevens/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -I/Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/swift-overrides.hmap -emit-const-values -Xfrontend -const-gather-protocols-file -Xfrontend /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore_const_extract_protocols.json -Xcc -iquote -Xcc /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/MomentumFinanceCore-generated-files.hmap -Xcc -I/Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/MomentumFinanceCore-own-target-headers.hmap -Xcc -I/Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/MomentumFinanceCore-all-target-headers.hmap -Xcc -iquote -Xcc /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/MomentumFinanceCore-project-headers.hmap -Xcc -I/Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Products/Debug-iphonesimulator/include -Xcc -I/Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/DerivedSources-normal/arm64 -Xcc -I/Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/DerivedSources/arm64 -Xcc -I/Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/DerivedSources -Xcc -DDEBUG\=1 -emit-objc-header -emit-objc-header-path /Users/danielstevens/Library/Developer/Xcode/DerivedData/MomentumFinance-flzbpweghcsrehaswbjwqiwmfywo/Build/Intermediates.noindex/MomentumFinance.build/Debug-iphonesimulator/MomentumFinanceCore.build/Objects-normal/arm64/MomentumFinanceCore-Swift.h -working-directory /Users/danielstevens/github-projects/momentum-finance -experimental-emit-module-separately -disable-cmo
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:5: error: expected 'func' keyword in instance method declaration
    SYNTAX ERROR HERE
    ^
    func 
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:12: error: found an unexpected second identifier in function declaration; is there an accidental break?
    SYNTAX ERROR HERE
           ^
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:12: note: join the identifiers together
    SYNTAX ERROR HERE
    ~~~~~~~^~~~~
    SYNTAXERROR
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:18: error: expected '(' in argument list of function declaration
    SYNTAX ERROR HERE
                 ^
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:17: error: consecutive declarations on a line must be separated by ';'
    SYNTAX ERROR HERE
                ^
                ;
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:18: error: expected declaration
    SYNTAX ERROR HERE
                 ^
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:13:20: note: in declaration of 'BiometricAuthManager'
public final class BiometricAuthManager {
                   ^
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:5: error: Expected 'func' keyword in instance method declaration
    SYNTAX ERROR HERE
    ^
    func  (in target 'MomentumFinanceCore' from project 'MomentumFinance')
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:12: error: Found an unexpected second identifier in function declaration; is there an accidental break?
    SYNTAX ERROR HERE
           ^ (in target 'MomentumFinanceCore' from project 'MomentumFinance')
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:12: note: Join the identifiers together
    SYNTAX ERROR HERE
    ~~~~~~~^~~~~
    SYNTAXERROR (in target 'MomentumFinanceCore' from project 'MomentumFinance')
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:18: error: Expected '(' in argument list of function declaration
    SYNTAX ERROR HERE
                 ^ (in target 'MomentumFinanceCore' from project 'MomentumFinance')
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:17: error: Consecutive declarations on a line must be separated by ';'
    SYNTAX ERROR HERE
                ^
                ; (in target 'MomentumFinanceCore' from project 'MomentumFinance')
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:15:18: error: Expected declaration
    SYNTAX ERROR HERE
                 ^ (in target 'MomentumFinanceCore' from project 'MomentumFinance')
/Users/danielstevens/github-projects/momentum-finance/Sources/MomentumFinanceCore/Services/BiometricAuthManager.swift:13:20: note: In declaration of 'BiometricAuthManager'
public final class BiometricAuthManager {
                   ^ (in target 'MomentumFinanceCore' from project 'MomentumFinance')

** BUILD FAILED **


The following build commands failed:
	SwiftDriver MomentumFinanceCore normal arm64 com.apple.xcode.tools.swift.compiler (in target 'MomentumFinanceCore' from project 'MomentumFinance')
	Building project MomentumFinance with scheme MomentumFinanceCore and configuration Debug
(2 failures)
